[package]
name = "simpletory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
serde_json = "1.0"
rand = "0.8.4"
